Make sure nav items never wrap

--- a/_styles/_navigation.sass
+++ b/_styles/_navigation.sass
@@ -54,6 +54,7 @@
 	margin-right: -0.5em
 	padding: 0 0.75em 0 0.25em
 	text-align: left
+	white-space: nowrap
 
 .top-nav-fixed
 	.site-nav
